{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 80,
  "lineage": "c17d24d0-7285-af2a-4b70-91aa7c37d2ed",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aabbe8b5272e1a9a",
            "arn": "arn:aws:ec2:ap-south-1:732940910144:elastic-ip/eipalloc-0aabbe8b5272e1a9a",
            "domain": "vpc",
            "id": "eipalloc-0aabbe8b5272e1a9a",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-126-2-117.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.2.117",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "ElasticIP-bastion"
            },
            "tags_all": {
              "name": "ElasticIP-bastion"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00022ccb33529c637",
            "arn": "arn:aws:ec2:ap-south-1:732940910144:instance/i-0a44dba227d94fcdd",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a44dba227d94fcdd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01b6603498a4cded9",
            "private_dns": "ip-10-0-10-113.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-073aef4874ebcbd5b",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072e3f136737f5ee0",
            "tags": {
              "Name": "Bastion-Ec2-Machine"
            },
            "tags_all": {
              "Name": "Bastion-Ec2-Machine"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0da86e5e8df9bfb5f"
            ]
          },
          "dependencies": [
            "aws_key_pair.key",
            "aws_security_group.allow_all",
            "data.aws_ami.bastion",
            "data.aws_availability_zones.availability",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732940910144:security-group/sg-0da86e5e8df9bfb5f",
            "description": "Allow all inbound and outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da86e5e8df9bfb5f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all inbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-all-sg",
            "name_prefix": "",
            "owner_id": "732940910144",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Owner": "Abhishek",
              "bastion": "Bastion-Ec2-Machine",
              "eip": "Bastion-Ec2-Machine",
              "private_subnet_tag": "prsubnets",
              "public_subnet_tags": "pusubnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Owner": "Abhishek",
              "bastion": "Bastion-Ec2-Machine",
              "eip": "Bastion-Ec2-Machine",
              "private_subnet_tag": "prsubnets",
              "public_subnet_tags": "pusubnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-03770ebed6dd4d4ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732940910144:network-acl/acl-0c0381d1b3362a239",
            "default_network_acl_id": "acl-0c0381d1b3362a239",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c0381d1b3362a239",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "732940910144",
            "subnet_ids": [
              "subnet-002544ef021f79409",
              "subnet-038be493afe2adb4d",
              "subnet-072e3f136737f5ee0"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev-default",
              "Owner": "Abhishek"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev-default",
              "Owner": "Abhishek"
            },
            "vpc_id": "vpc-03770ebed6dd4d4ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732940910144:route-table/rtb-0c667e6dd421ceb49",
            "default_route_table_id": "rtb-0c667e6dd421ceb49",
            "id": "rtb-0c667e6dd421ceb49",
            "owner_id": "732940910144",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev-default",
              "Owner": "Abhishek"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev-default",
              "Owner": "Abhishek"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-03770ebed6dd4d4ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732940910144:security-group/sg-0c248a818d0d0c9e9",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0c248a818d0d0c9e9",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "732940910144",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev-default",
              "Owner": "Abhishek"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev-default",
              "Owner": "Abhishek"
            },
            "vpc_id": "vpc-03770ebed6dd4d4ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0911b346a09dadb9e",
            "arn": "arn:aws:ec2:ap-south-1:732940910144:elastic-ip/eipalloc-0911b346a09dadb9e",
            "domain": "vpc",
            "id": "eipalloc-0911b346a09dadb9e",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-207-80-200.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.80.200",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev-ap-south-1a",
              "Owner": "Abhishek"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev-ap-south-1a",
              "Owner": "Abhishek"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732940910144:internet-gateway/igw-0caba359ab9649765",
            "id": "igw-0caba359ab9649765",
            "owner_id": "732940910144",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev",
              "Owner": "Abhishek"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev",
              "Owner": "Abhishek"
            },
            "vpc_id": "vpc-03770ebed6dd4d4ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0911b346a09dadb9e",
            "association_id": "eipassoc-09a375dbf6fbf00dc",
            "connectivity_type": "public",
            "id": "nat-0ddd7b851504867d7",
            "network_interface_id": "eni-02b01642b404501e9",
            "private_ip": "10.0.10.119",
            "public_ip": "15.207.80.200",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-072e3f136737f5ee0",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev-ap-south-1a",
              "Owner": "Abhishek"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev-ap-south-1a",
              "Owner": "Abhishek"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0dcf68da2e62ef7531080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ddd7b851504867d7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dcf68da2e62ef753",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0caba359ab9649765",
            "id": "r-rtb-037b86a3092bb0b711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-037b86a3092bb0b71",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732940910144:route-table/rtb-0dcf68da2e62ef753",
            "id": "rtb-0dcf68da2e62ef753",
            "owner_id": "732940910144",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev-private",
              "Owner": "Abhishek"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev-private",
              "Owner": "Abhishek"
            },
            "timeouts": null,
            "vpc_id": "vpc-03770ebed6dd4d4ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732940910144:route-table/rtb-037b86a3092bb0b71",
            "id": "rtb-037b86a3092bb0b71",
            "owner_id": "732940910144",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev-public",
              "Owner": "Abhishek"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev-public",
              "Owner": "Abhishek"
            },
            "timeouts": null,
            "vpc_id": "vpc-03770ebed6dd4d4ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0785e0a5efd75b7b2",
            "route_table_id": "rtb-0dcf68da2e62ef753",
            "subnet_id": "subnet-0ce013da27ab2b1a0"
          },
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f49be3ca2be56e3",
            "route_table_id": "rtb-0dcf68da2e62ef753",
            "subnet_id": "subnet-002544ef021f79409"
          },
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e25bade7b71e600",
            "route_table_id": "rtb-037b86a3092bb0b71",
            "subnet_id": "subnet-072e3f136737f5ee0"
          },
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a1118540206410e",
            "route_table_id": "rtb-037b86a3092bb0b71",
            "subnet_id": "subnet-038be493afe2adb4d"
          },
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732940910144:subnet/subnet-0ce013da27ab2b1a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce013da27ab2b1a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "732940910144",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev-private-ap-south-1a",
              "Owner": "Abhishek",
              "Type": "prsubnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev-private-ap-south-1a",
              "Owner": "Abhishek",
              "Type": "prsubnets"
            },
            "vpc_id": "vpc-03770ebed6dd4d4ce"
          },
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732940910144:subnet/subnet-002544ef021f79409",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.31.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002544ef021f79409",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "732940910144",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev-private-ap-south-1b",
              "Owner": "Abhishek",
              "Type": "prsubnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev-private-ap-south-1b",
              "Owner": "Abhishek",
              "Type": "prsubnets"
            },
            "vpc_id": "vpc-03770ebed6dd4d4ce"
          },
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732940910144:subnet/subnet-072e3f136737f5ee0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072e3f136737f5ee0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "732940910144",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev-public-ap-south-1a",
              "Owner": "Abhishek",
              "Type": "pusubnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev-public-ap-south-1a",
              "Owner": "Abhishek",
              "Type": "pusubnets"
            },
            "vpc_id": "vpc-03770ebed6dd4d4ce"
          },
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732940910144:subnet/subnet-038be493afe2adb4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038be493afe2adb4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "732940910144",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev-public-ap-south-1b",
              "Owner": "Abhishek",
              "Type": "pusubnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev-public-ap-south-1b",
              "Owner": "Abhishek",
              "Type": "pusubnets"
            },
            "vpc_id": "vpc-03770ebed6dd4d4ce"
          },
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732940910144:vpc/vpc-03770ebed6dd4d4ce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c0381d1b3362a239",
            "default_route_table_id": "rtb-0c667e6dd421ceb49",
            "default_security_group_id": "sg-0c248a818d0d0c9e9",
            "dhcp_options_id": "dopt-09f91f7c487a7443f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03770ebed6dd4d4ce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c667e6dd421ceb49",
            "owner_id": "732940910144",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev",
              "Owner": "Abhishek"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev",
              "Owner": "Abhishek"
            }
          }
        }
      ]
    }
  ]
}